@@ -1,0 +1,9 @@
+# $NetBSD: Makefile,v 1.1.2.2 2015/04/21 05:22:58 snj Exp $
+
+FILES=		service
+MAN=		service.8
+
+FILESDIR=	/usr/sbin
+FILESMODE=	${BINMODE}
+
+.include <bsd.prog.mk>
